plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'cdri'
version = '0.0.1-SNAPSHOT'
description = 'cdri-book'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly("org.projectlombok:lombok")
    annotationProcessor("org.projectlombok:lombok")

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor(
        'jakarta.persistence:jakarta.persistence-api',
        'jakarta.annotation:jakarta.annotation-api',
        'com.querydsl:querydsl-apt:5.0.0:jakarta'
    )

    runtimeOnly 'com.mysql:mysql-connector-j'
    

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.h2database:h2:2.4.240'
}

def queryDslDir = "src/main/generated"
tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorGeneratedSourcesDirectory(file(queryDslDir))
}

sourceSets {
    main {
        java {
            srcDirs += "src/main/generated"
        }
    }
}

clean.doLast {
    file(queryDslDir).delete()
}

tasks.named('test') {
    useJUnitPlatform()
}
